ボタンを追加

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
   <h1>WebView Bridge サンプル</h1>
-  <button id="sendBtn">WebViewにメッセージ送信</button>
-  <div id="log">WebViewからのメッセージはここに表示されます</div>
+  <div id="log">ネイティブから編集されるメッセージ</div>
+  <button id="sendBtn1">WebViewからネイティブ1</button>
+  <button id="sendBtn2">WebViewからネイティブ2</button>
 
   <script src="js/script.js"></script>
 </body>
